<resources>
    <string name="app_name">CarCamerasAndLightsBluetooth</string>
    <string name="coarse_permission_rationale">Для подключения к устройству необходимо разрешение на использование геолокации в фоне</string>
    <string name="coarse_permission_rationale_notifications">Для подписки на оповещения контроллера необходимо разрешение на использование геолокации в фоне</string>
    <string name="camera_on_air">на экране</string>
    <string name="got_new_timings_message">Настройки задержек получены</string>
    <string name="got_income_data_error_message">Ошибка приема данных: </string>
    <string name="got_packet_recognition_error_message">Ошибка разбора пакетов</string>
    <string name="got_device_error_count">Получено число ошибок передачи, обнаруженных контроллером</string>
    <string name="is_reachable"> доступно</string>
    <string name="connecting_to">Подключаюсь к адресу </string>
    <string name="remote_not_connected">Контроллер не подключен</string>
    <string name="remote_scanning">Ищу контроллер…</string>
    <string name="remote_connected">Связь установлена</string>
    <string name="remote_connected_notifications">Уведомления подключены</string>
    <string name="service_discovered">Изучил службу</string>
    <string name="service_discovery_failed">Изучить службу не удалось</string>
    <string name="discover_service">Смотрю службы</string>
    <string name="delay">с задержкой</string>
    <string name="discover_service_failed_to_start">Не удалось начать изучение служб</string>
    <string name="is_not_connected_now">отключился</string>
    <string name="failed_to_connect">Подключится не удалось</string>
    <string name="scan_failed_with_error">Ошибка сканирования </string>
    <string name="waiting_bonding_completion">Ждем завершения привязки устройства</string>
    <string name="delay_set_title">Задержки</string>
    <string name="bounce_d_name">Дребезг конактов</string>
    <string name="repeater_d_name">Двойное нажатие</string>
    <string name="front_cam_d_name">Передняя камера</string>
    <string name="rear_cam_d_name">Задняя камера</string>
    <string name="not_gotten">Не получено</string>
    <string name="new_value">Введите</string>
</resources>